--- a/index.html
+++ b/index.html
@@ -366,11 +366,11 @@
                             <label for="course" class="block text-sm font-medium text-gray-700 mb-1">Course Interested In</label>
                             <select id="course" name="course" class="w-full px-4 py-3 rounded-lg border border-gray-300 focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500">
                                 <option value="">Select a course</option>
-                                <option value="Full Stack Development">Full Stack Development</option>
+                                <option value="Full Stack Development">Non IT to IT</option>
                                 <option value="Data Science & AI">Data Science & AI</option>
                                 <option value="Cloud Computing & DevOps">Cloud Computing & DevOps</option>
-                                <option value="Cybersecurity">Cybersecurity</option>
-                                <option value="Mobile App Development">Mobile App Development</option>
+                              <!--  <option value="Cybersecurity">Cybersecurity</option>
+                                <option value="Mobile App Development">Mobile App Development</option> -->
                             </select>
                         </div>
                         
